<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_my_add"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/menu_my_adds" />

        <item
            android:id="@+id/nav_my_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_my_favorite" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_payment" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
