<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheakOut">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/divider"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-190dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/trende" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"

        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/location1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="Tharaki Kulathunge" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="350dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:textColor="#0000FF"
        android:text="@string/edit" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="450dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/new_kandy_road_isurupura_malabe_malabe" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="1dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/colombo_suburbs_western" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="Select a lable for effective delivery" />



    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="@string/bill_to_the_same_address" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="350dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:textColor="#0000FF"
        android:text="@string/edit" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/contact" />

    <EditText
        android:id="@+id/editText"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:hint="Contact"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/email" />

    <EditText
        android:id="@+id/editText1"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:hint="Email"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="05dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="@string/delivary_option" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="1dp"
        app:srcCompat="@drawable/success" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Rs.550"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="@string/standard" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:text="@string/get_by_10_17_aug" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:text="Total:Rs.1850" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/vat_included_where_applicable" />

    <Button
        android:id="@+id/pay"
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:shadowColor="#FF0000"
        android:text="@string/proceed_to_pay" />

</RelativeLayout>