<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trende" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="80dp"
        android:text="@string/logintitle"
        android:textSize="@dimen/header_font"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editText"
            android:layout_width="256dp"
            android:layout_height="38dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:hint="UserName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.285" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="256dp"
            android:layout_height="38dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="241dp"
            android:layout_height="45dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="418dp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="187dp"
            android:layout_height="26dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:paddingRight="5dp"

            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginbtn"
            app:layout_constraintVertical_bias="0.17" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="240dp"
            android:layout_height="38dp"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:text="Don't have an account?"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="153dp"
            android:layout_height="42dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="178dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>